# RustPLC

./: .gitignore  Cargo.toml  README.md  prd.json  prd.md  progress.txt  prompt.md  ralph.sh
.claude/: settings.local.json
config/: hal_fpga.toml  hal_icesugar_pro_rtu.toml  hal_modbus.toml  hal_modbus_tcp.toml  hal_modbus_tcp_ex1.toml  hal_nucleo_f103_rtu.toml  hal_sim.toml
crates/rustplc_codegen/: Cargo.toml
crates/rustplc_compiler/: Cargo.toml
crates/rustplc_compiler/src/: codegen.rs  lib.rs  main.rs
crates/rustplc_compiler/src/codegen/: mod.rs  state_machine.rs
crates/rustplc_compiler/src/ir/: mod.rs
crates/rustplc_compiler/src/semantic/: mod.rs
crates/rustplc_compiler/src/verification/: causality.rs  safety.rs  timing.rs
crates/rustplc_compiler/tests/: examples_integration.rs  mode_b_codegen_e2e.rs  verification_capability_prd.md
crates/rustplc_fpga/: Cargo.toml
crates/rustplc_hal/: Cargo.toml
crates/rustplc_ir/: Cargo.toml
crates/rustplc_ir/src/: lib.rs
crates/rustplc_modbus/: Cargo.toml
crates/rustplc_modbus/src/: lib.rs
crates/rustplc_orchestrator/: Cargo.toml
crates/rustplc_orchestrator/src/: lib.rs
crates/rustplc_orchestrator/tests/: mode_b_e2e.rs
crates/rustplc_runtime/: Cargo.toml
docs/: rustplc_intro.tex  rustplc_v3.tex
examples/: error_missing_device.plc  half_rotation.plc  verification_capability_output.rs
examples/industrial/: conveyor_stamp.plc  two_cylinder.plc
examples/integration/: README.md
examples/verification/: error_all_verifiers.plc  ex1_safety_pass.plc  ex2_safety_fail.plc  ex3_liveness_fail.plc  ex4_timing_fail.plc  ex5_causality_fail.plc  ex6_all_pass.plc
infra/acceptance/: collect_evidence.sh  mode_acceptance.html
infra/board/nucleo-f103-firmware/: Cargo.toml  README.md
infra/board/nucleo-f103-firmware/scripts/: build.sh  flash_ssh.sh  serial_sniff_ssh.sh
infra/esxi/: boot_modbus_vm.sh  deploy_slave.sh
infra/modbus-slave/: modbus_slave.py
infra/qemu/: .gitignore  README.md  _lib.sh  boot.sh  deploy-slave.sh  install-ubuntu.sh  kill.sh  status.sh
src/: lib.rs  main.rs
src/ast/: mod.rs
src/error/: mod.rs
src/ir/: mod.rs
src/parser/: mod.rs  plc.pest
tests/: examples_integration.rs  verification_capability.rs  verification_capability_test_report.md
(+53 files in other folders)
