[package]
name = "rust_plc"
version = "0.1.0"
edition = "2024"

[dependencies]
rustplc_ir = { path = "../rustplc_ir" }
rustplc_codegen = { path = "../rustplc_codegen" }
pest = "2.7"
pest_derive = "2.7"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
z3 = { version = "0.12", features = ["static-link-z3"], optional = true }

[features]
default = []
z3-solver = ["dep:z3"]
