[package]
name = "rustplc_ir"
version = "0.1.0"
edition = "2024"
description = "Shared Kernel — IR data structures for RustPLC (TopologyGraph, StateMachine, ConstraintSet, TimingModel)"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
