[package]
name = "rustplc_modbus"
version = "0.1.0"
edition = "2024"
description = "Modbus RTU/TCP backend for RustPLC HAL"

[dependencies]
rustplc_hal = { path = "../rustplc_hal" }
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tokio-modbus = "0.17"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
